# jlma-Synaptic-Mesh

./: .gitignore  README.md
docs/: README.md
docs/tutorials/: quick-start.md
plans/synaptic-market/: readme.md
src/js/synaptic-cli/: package-lock.json  package.json
src/js/synaptic-cli/lib/: cli.js  cli.js.map
src/js/synaptic-cli/lib/commands/: config.d.ts.map  config.js  config.js.map  dag.d.ts.map  dag.js  dag.js.map  kimi.d.ts  kimi.d.ts.map  kimi.js  kimi.js.map  neural.d.ts  neural.d.ts.map  neural.js  neural.js.map  peer.d.ts.map  peer.js  peer.js.map  status.d.ts.map  status.js  status.js.map  stop.d.ts.map  stop.js  stop.js.map
src/js/synaptic-cli/src/: cli.ts
src/js/synaptic-cli/src/commands/: config.ts  dag.ts  kimi.ts  neural.ts  peer.ts  status.ts  stop.ts
src/js/synaptic-cli/src/core/: mesh-client.js
src/js/synaptic-cli/tests/cli/: kimi-k2-cli.test.js
src/js/synaptic-cli/tests/integration/: kimi-k2-mesh-integration.test.js
src/js/synaptic-cli/tests/mcp/: kimi-k2-mcp-tools.test.js
src/mcp/: README.md  synaptic-mcp-server.ts
src/rs/daa-swarm/src/: lib.rs
src/rs/ruv-fann-wasm/: Cargo.toml
src/rs/synaptic-mesh-cli/: Cargo.toml
src/rs/synaptic-mesh-cli/src/: main.rs
standalone-crates/synaptic-mesh-cli/: Cargo.toml  README.md
standalone-crates/synaptic-mesh-cli/crates/claude_market/: Cargo.toml  README.md
standalone-crates/synaptic-mesh-cli/crates/claude_market/src/: escrow.rs  lib.rs  market.rs  reputation.rs  wallet.rs
standalone-crates/synaptic-mesh-cli/crates/kimi-expert-analyzer/src/: lib.rs
standalone-crates/synaptic-mesh-cli/crates/kimi-fann-core/: CLI_USAGE.md  Cargo.toml
standalone-crates/synaptic-mesh-cli/crates/kimi-fann-core/examples/: micro_expert_demo.rs  persistence_demo.rs
standalone-crates/synaptic-mesh-cli/crates/kimi-fann-core/src/: async_processor.rs  domains.rs  enhanced_router.rs  error.rs  expert.rs  lib.rs  memory.rs  optimized_features.rs  router.rs  runtime.rs
standalone-crates/synaptic-mesh-cli/crates/kimi-fann-core/tests/: end_to_end_tests.rs  integration_tests.rs  neural_network_tests.rs  property_tests.rs  router_tests.rs  wasm_tests.rs
standalone-crates/synaptic-mesh-cli/src/: lib.rs
