[package]
name = "synaptic-mesh-cli"
version = "0.1.0"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
description = "Command-line interface for Synaptic Neural Mesh"
repository = "https://github.com/ruvnet/Synaptic-Neural-Mesh"
license = "MIT OR Apache-2.0"
keywords = ["cli", "neural", "mesh", "distributed", "cognition"]

[[bin]]
name = "synaptic-mesh"
path = "src/main.rs"

[dependencies]
# Local crates
qudag-core = { path = "../qudag-core" }
neural-mesh = { path = "../neural-mesh" }
daa-swarm = { path = "../daa-swarm" }
ruv-fann-wasm = { path = "../ruv-fann-wasm", optional = true }

# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system and paths
directories = "5.0"

# Error handling and logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["tui", "metrics"]
tui = []
metrics = []
wasm = ["ruv-fann-wasm"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"